--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Remingtron's GitHub Page</title>
+    <title>Number Jumble Math Game</title>
   </head>
 
   <body>
@@ -16,11 +16,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/remingtron">View on GitHub</a>
-
-          <h1 id="project_title">Remingtron.GitHub.io</h1>
+          <h1 id="project_title">Number Jumble Math Game</h1>
           <h2 id="project_tagline"></h2>
-
         </header>
     </div>
 
