--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Number Jumble Math Game</title>
+    <title>remingtron's github page</title>
   </head>
 
   <body>
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <h1 id="project_title">Number Jumble Math Game</h1>
+          <h1 id="project_title">remingtron's github page</h1>
           <h2 id="project_tagline"></h2>
         </header>
     </div>
