--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my github page.</h3>
 
-<p>This page contains information about my recent and current projects. You can also get to my github profile <a href="https://github.com/remingtron">here</a></p>
+<p>This page contains information about my recent and current projects. You can also get to my github profile <a href="https://github.com/remingtron">here</a>.</p>
 
 <h3>
 <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
@@ -35,7 +35,7 @@
 <a id="number-jumble" class="anchor" href="#number-jumble" aria-hidden="true"><span class="octicon octicon-link"></span></a>Number Jumble Math Game</h4>
 
 <p>Number Jumble Math Game is an educational game designed to help teach addition facts. Players try to create as many chains that add up to the target number before time runs out. Game length is adjustable from 10 seconds to 5 minutes. More points are awarded for longer chains (when "chain length scoring" is enabled).</p>
-<p>For issues with Number Jumble, please send an email to <a href="mailto:numberjumblemathgame@gmail.com">numberjumblemathgame@gmail.com</a> or open an issue in project repository on github, located <a href="https://github.com/remingtron/NumberJumble">here</a></p>
+<p>For issues with Number Jumble, please send an email to <a href="mailto:numberjumblemathgame@gmail.com">numberjumblemathgame@gmail.com</a> or open an issue in project repository on github, located <a href="https://github.com/remingtron/NumberJumble">here.</a></p>
       </section>
     </div>
 
